--- a/Components/menu.html
+++ b/Components/menu.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../Css/menu.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
+    <script src="https://cdn.tailwindcss.com">
+    </script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body> 
     <nav>
@@ -66,7 +69,6 @@
         <p id="desc"></p>
         <h4 id="price"></h4>
         <button onclick="addToCart()" ondblclick="closeDetails()">Add to Cart</button>
-    
       </div>
 
 
