--- a/Css/gallery.css
+++ b/Css/gallery.css
@@ -40,6 +40,7 @@ h2{
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    height: 400px;
 }
 
 .image-container img {
