--- a/Css/menu.css
+++ b/Css/menu.css
@@ -87,9 +87,9 @@ input{
 
 
 .menu-item {
-    border: 2px solid rgb(0, 0, 0);
+    border: none;
     margin-bottom: 1rem;
-    width: 270px;
+    width: 300px;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -98,6 +98,8 @@ input{
     margin-top: 0;
 }
 #menu-list{
+    align-items: center;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -105,7 +107,7 @@ input{
     margin-left: 45px;
 }
 .menu-card{
-    height: 100%;
+    height: auto;
     width: auto;
     background-color: #dc1a1a;
     padding: 10px;
@@ -156,7 +158,7 @@ img{
 
 
 
-@media (max-width: 920px) {
+@media (max-width: 768px) {
   .list {
     width: 100%;
     display: flex;
@@ -174,18 +176,26 @@ img{
     .search-bar{
         width: 85%;
     }
+    #menu-list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .menu-item{
-        width: 240px;
+        width: 90%;
         margin: 0;
-        height: auto;
+        height: 300px;
         overflow: hidden;
+
     }
     .menu-card{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    padding: 0;
     }
     .menu-card img{
-        height: 65%;
+        height: 70%;
     }
     .menu-card h3{
         font-size: 18px;
