--- a/Components/gallery.html
+++ b/Components/gallery.html
@@ -8,35 +8,26 @@
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
-    <!-- <header>
-        <h1>Delicious Italian Food</h1>
-        <p>LOVE AT FIRST BITE</p>
-    </header> -->
-    <nav>
-        <div class="logo">
-            <!-- <img src="../Images/logo1.png" alt="Pangat_Hotel" > -->
-             <h1>Hotel_Pangat</h1>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-            <li><a href="#">Book Table</a></li>
+    <nav class="navbar">
+        <div class="navbar-brand"><img src="../Images/logo1.png" style="height: 40px; width: 100px;" alt=""></div>
+        <ul class="navbar-menu" id="navbarMenu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Book Table</a></li>
         </ul>
-        <div class="nav-list">
-            <ul class="item-list">
-                <li><a href="#"><img src="../icon/login.png" alt=""></a></li>
-                <li><a href="cart.html"><img src="../icon/cart.png" alt=""></a></li>
-                <div class="burger">
-                    <img src="../icon/menu.png" alt="bar" class="open">
-                </div>
-                <img src="../icon/close.png" alt="close" class="close">
-
-            </ul>
+        <div class="navbar-actions">
+          
+          <a href="cart.html">Cart(0)</a> 
         </div>
-        
-    </nav>
+        <div class="navbar-toggle" id="navbarToggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </nav>
 
     <main>
         <h2>Our Gallery</h2>
