--- a/Components/menu.html
+++ b/Components/menu.html
@@ -13,63 +13,44 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body> 
-    <nav>
-        <div class="logo">
-            <!-- <img src="../Images/logo1.png" alt="Pangat_Hotel" > -->
-             <h1>Hotel_Pangat</h1>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-            <li><a href="#">Book Table</a></li>
-        </ul>
-        <div class="nav-list">
-            <ul class="item-list">
-                <li><a href="#"><img src="../icon/login.png" alt=""></a></li>
-                <li><a href="cart.html"><img src="../icon/cart.png" alt=""></a></li>
-                <div class="burger">
-                    <img src="../icon/menu.png" alt="bar" class="open">
-                </div>
-                <img src="../icon/close.png" alt="close" class="close">
-
-            </ul>
-        </div>    
-    </nav>
+  <nav class="navbar">
+    <div class="navbar-brand"><img src="../Images/logo1.png" style="height: 40px; width: 100px;" alt=""></div>
+    <ul class="navbar-menu" id="navbarMenu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Menu</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Book Table</a></li>
+    </ul>
+    <div class="navbar-actions">
+      
+      <a href="cart.html">Cart(0)</a> 
+    </div>
+    <div class="navbar-toggle" id="navbarToggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
 
     <header>
         <h2>Menu</h2>
         <div class="underline"></div>
     </header>
-    <div class="list">
-        <ul class="menubar">
-            <li style="margin: 0;"><a href="#" onclick="filterItems('all')">All</a></li>
-            <li style="margin: 0;"><a href="#" onclick="filterItems('veg')">Veg</a></li>
-            <li style="margin: 0;"><a href="#" onclick="filterItems('chicken')">Chicken</a></li>
-            <li style="margin: 0;"><a href="#" onclick="filterItems('mutton')">Mutton</a></li>
-            <li style="margin: 0;"><a href="#" onclick="filterItems('fish')">Fish</a></li>
-        </ul>
-    </div>
+
 
     <section>
-        <center><div class="search-bar">
+      <center>
+        <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Search..." onkeyup="searchItems()">
         </div>
-        <div class="menu-container">
-            <div id="menu-list">
-                </div>
+        <div class="product-container" id="productContainer">
+          
+            <!-- Products will be loaded dynamically here -->
         </div>
-        </center>
+    </center>
     </section>
-    <div id="cardDetails" class="card-details">
-        <span class="close-button" onclick="closeDetails()"><img src="../icon/close.png" style="height: 35px;width: 35px;"></span>
-        <img id="productImage" src=" " alt="">
-        <h2 id="productName"></h2>
-        <p id="desc"></p>
-        <h4 id="price"></h4>
-        <button onclick="addToCart()" ondblclick="closeDetails()">Add to Cart</button>
-      </div>
 
 
     <script src="../Javascript/menu.js"></script>
